# robologs

./: .gitignore  CMakeLists.txt
python/: main.py
src/: CMakeLists.txt  Drawer.cpp  Drawer.h  Field.cpp  Field.h  GameStateTracker.cpp  GameStateTracker.h  Interface.cpp  Interface.h  Player.cpp  Player.h  Reader.cpp  Reader.h  Robologs.cpp  Robologs.h  Utilities.cpp  Utilities.h  Writer.cpp  Writer.h  main.cpp  test.cpp  testUI.cpp  testUI.h
src/common/: logfile.cpp
src/common/format/: file_format_legacy.cpp
src/examples/: CMakeLists.txt  examplereader.cpp  examplereader_old.cpp
src/game/: GameInfoTracker.cpp  GameInfoTracker.h  GameStateTracker.cpp  GameStateTracker.h
src/input/: Reader.cpp  Reader.h
src/interface/: Field.cpp  Field.h  Interface.cpp  Interface.h  Timeline.cpp  Timeline.h
src/logplayer/: player.cpp
src/output/: ASCII.cpp  ASCII.h  Drawer.h  Writer.cpp  Writer.h
src/protobuf/: ssl_referee.proto
