include_directories(${PROTOBUF_INCLUDE_DIR})

set(SOURCES
        ../Reader.cpp
)

#add_executable(reader ${SOURCES})
#target_link_libraries(reader protobuf)

#add_executable(examplereader ${SOURCES})
#target_link_libraries(examplereader protobuf)
#set_target_properties(examplereader PROPERTIES EXCLUDE_FROM_ALL true)
